2003-11-18  Zoltan Varga  <vargaz@freemail.hu>

	* RuntimeHelpers.cs (Equals): Track changes to ValueType.

2003-11-15  Zoltan Varga  <vargaz@freemail.hu>

	* MethodImplOptions.cs MethodCodeType.cs: Add [Flags].

Tue Jul 29 12:15:13 CEST 2003 Paolo Molaro <lupus@ximian.com>

	* RuntimeHelpers.cs: pass the handles values o icalls, to avoid 
	special cases in some call conventions.

2003-06-18  Zoltan Varga  <vargaz@freemail.hu>

	* RuntimeHelpers.cs: Wrap NET 1.1 methods with #if NET_1_1.

2003-04-27  Zoltan Varga  <vargaz@freemail.hu>

	* RuntimeHelpers.cs: Remove workaround for bug #41550 since it is fixed
	now.

2003-04-19  Zoltan Varga  <vargaz@freemail.hu>

	* RuntimeHelpers.cs: Enable the last changes again since they no
	longer break the corlib_cmp build.

2003-04-18  Zoltan Varga  <vargaz@freemail.hu>

	* RuntimeHelpers.cs: Back out these changes as they break the windows
	build.
	
2003-04-18  Zoltan Varga  <vargaz@freemail.hu>

	* RuntimeHelpers.cs: Implement Equals and GetHashCode methods from
	NET 1.1.	

2002-09-21  Zoltan Varga  <vargaz@freemail.hu>

	* CallConvCdecl.cs: new file

	* CallConvFastcall.cs: new file

	* CallConvThiscall.cs: new file

	* CallConvStdcall.cs: new file

	* RuntimeHelpers.cs: Implemented OffsetToStringData, GetObjectValue and
	RunClassConstructor.

2002-08-23  Nick Drochak  <ndrochak@gol.com>

	* IsVolatile.cs: No _public_ members, but if we don't put a private
	ctor, the complier will give us a public one.

2002-08-23  Nick Drochak  <ndrochak@gol.com>

	* IsVolatile.cs: This class has no members, not even an empty ctor.

2002-07-24  Duncan Mak  <duncan@ximian.com>

	* AccessedThroughPropertyAttribute.cs:
	* CompilationRelaxationsAttribute.cs: 
	* CompilerGlobalScopeAttribute.cs: 
	* DateTimeConstantAttribute.cs: 
	* DecimalConstantAttribute.cs: 
	* IDispatchConstantAttribute.cs:
	* IsVolatile.cs:
	* IUnknownConstantAttribute.cs: 
	* RequiredAttributeAttribute.cs: Visibility changes.

2002-07-23  Duncan Mak  <duncan@ximian.com>
