@@ -1,0 +1,20 @@
+//
+// System.Runtime.CompilerServices/NewConstraintAttribute.cs
+//
+// Author:
+//   Martin Baulig (martin@ximian.com)
+//
+// (C) 2004 Novell, Inc.
+//
+
+using System.Runtime.InteropServices;
+
+namespace System.Runtime.CompilerServices
+{
+	public sealed class NewConstraintAttribute : Attribute
+	{
+		public NewConstraintAttribute ()
+		{
+		}
+	}
+}
