@@ -1,3 +1,7 @@
+2004-03-30  Martin Baulig  <martin@ximian.com>
+
+	* NewConstraintAttribute.cs: New file.
+
 2003-11-18  Zoltan Varga  <vargaz@freemail.hu>
 
 	* RuntimeHelpers.cs (Equals): Track changes to ValueType.
